--- a/rules.html
+++ b/rules.html
@@ -63,7 +63,7 @@ AI program that decides the actions of the samurai that plays the games. </p>
 	    Outline of the Samurai 3x3 Game</a></li>
 -->
 	<li><a href="rules-en.pdf">
-	    Rule Details and Programming Interface</a></li>
+	    Rule Details and Programming Interface (version September 14, 2016)</a></li>
 <!--
 	<li>Tournament rules are described
 	  in <a href="preliminary.html">the preliminary round page</a>
