--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Oct 10: <a href="rules.html">Rules</a> have been slightly updated.
 <li>Sep 3: Rules and Program Interface are now available on the <a href="rules.html">Rules page</a>.
           <li>Sep 2: This preliminary website has been launched.
       </ul>
