--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ and
 -->
 
    <section id="prize">
-<h2>Prize (TBD)</h2>
+<h2>Prize</h2>
 
 <p>
 <b>For Preliminary round contestants (including World Finalists): </b>
@@ -142,25 +142,26 @@ and
 
 <p>
 Preliminary round contestants are invited to Banquet on the World final round date on a first-come, 
-first-served basis; the number of Banquet participants is limited. (TBD)
+first-served basis; the number of Banquet participants is limited.
 </p>
 
 <p>
-Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/79/">79th IPSJ Annual Convention by register themselves at the Convention site</a>. (TBD)
+Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/79/">79th IPSJ Annual Convention by register themselves at the Convention site</a>. 
 </p>
 
 <p><b>For World Finalists: </b></p>
 
 <p>
-Winners of World Final will receive prizes (TBD). Moreover there will be some Sponsor Awards and Gifts (TBD).
+Winners of World Final will receive prizes. Moreover there will be some Sponsor Awards and Gifts (TBD).
 </p>
 
 <p>
-World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.) (TBD)
+World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)
 </p>
 
 <p>
-Travel expenses of World final contestants will be partially supported (TBD).
+Travel expense of one representative contestanst per each World final team participating 
+from far away areas will be partially supported.
 Last year World final contestants from out side of Japan received travel expenses up 
 to 100,000JPY per team, 
 and contestants from a long distance within Japan received full travel expenses.
