--- a/rules.html
+++ b/rules.html
@@ -41,7 +41,7 @@
         <li><a href=".">Home</a></li>
         <li>Schedule</li>
         <li><a href="rules.html">Rules</a></li>
-        <li>Software</li>
+        <li><a href="software.html">Software</a></li>
         <li>Tutorial</li>
         <li>Entry</li>
         <li>Preliminary</li>
