--- a/software.html
+++ b/software.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="Description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -14,6 +14,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -33,19 +34,19 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
 </center>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
+        <li>Schedule</li>
         <li><a href="rules.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
-        <li><a href="preliminary.html">Preliminary</a></li>
-        <li><a href="final.html">Final</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li>Tutorial</li>
+        <li>Entry</li>
+        <li>Preliminary</li>
+        <li>Final</li>
+        <li>FAQ</li>
         <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
@@ -55,19 +56,16 @@
     <section id="main">
 	  <h2>Software</h2>
       <p>The following software systems are currently available for
-	the SamurAI 3x3 game.</p>
+	the SamurAI 3x3 2016 game.</p>
       <ul>
-	<li><a href="software/SamurAImanager-0106.tgz">
-	    SamurAI 3x3 Game Management System</a>:
-	  Manages a SamurAI 3x3 game according to its rules, invoking
+	<li><a href="software/samurai-software-20161031.tgz">
+	    SamurAI 3x3 2016 Game Management System</a>:
+	  Manages a SamurAI 3x3 2016 game according to its rules, invoking
 	  AI programs to control samurai.
 	  Several sample AI programs are also included.
-	  The system and sample programs are written in C++11.<br>
-	  Note: The program interface revised on the release of Jan. 6th.
 	  See the README file for details.
-	  Specify the option -t to obtain the same output format
-	  as the former version.
 	</li>
+<!--
 	<li>Sample AI programs in languages other than C++.
 	  <ul>
 	    <li><a href="software/python2-player-0106.tgz">Python 2 (updated on Jan. 6)</a></li>
@@ -80,6 +78,7 @@
 	  management system.
 	  This tool is written in Java.
 	</li>
+-->
       </ul>
     </section>
 
@@ -106,6 +105,7 @@
       	<td width="300">
       	  <section id="sponsors">
             <h3>Gold Sponsors</h3>
+<!--
             <p>e-Seikatsu Co., Ltd.<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
           <p>Hitachi, Ltd.<br>
@@ -115,7 +115,9 @@
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
+-->
             <h3>Supporters</h3>
+<!--
 <p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -126,16 +128,19 @@
 <p>Cray Japan Inc.<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
-
+-->
 <h3>Media Sponsors</h3>
+<!--
             <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 <p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
+-->
       	  </section>
       	</td>
       	<td>
       	  <section id="supporters">
       	    <h3>Supporters</h3>
+<!--
             <p class="smaller">
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
@@ -179,6 +184,7 @@ The Ministry of Economy, Trade and Industry<br><br>
 The Ministry of Education, Culture, Sports, Science and Technology
 
              </p>
+-->
           </section>
       	</td>
       </tr>
