--- a/index-jp.html
+++ b/index-jp.html
@@ -40,7 +40,7 @@
         <li><a href="index-jp.html">ホーム</a></li>
         <li>日程</li>
         <li><a href="rules-jp.html">ルール</a></li>
-        <li>ソフトウェア</li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
         <li>チュートリアル</a></li>
         <li>参加登録</a></li>
         <li>予選</a></li>
@@ -107,6 +107,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      	<li>11月1日: ゲームの実行管理システムを <a href="software-jp.html">ソフトウェア</a> に公開しました。
       	<li>10月21日: 特典について更新しました。
       	<li>10月10日: <a href="rules-jp.html">ゲームルール</a>を更新しました。
       	<li>9月3日: <a href="sponsor-jp.html">スポンサー募集</a>を開始しました。
