--- a/software-jp.html
+++ b/software-jp.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="description" content="SamurAI Coding 2015-16">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,6 +15,7 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
+<!--
 <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
 <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
 <a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
@@ -32,18 +33,18 @@
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
 <img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
 </center>  <nav id="global">
       <ul>
         <li><a href="index-jp.html">ホーム</a></li>
-        <li><a href="schedule-jp.html">日程</a></li>
+        <li>日程</li>
         <li><a href="rules-jp.html">ルール</a></li>
         <li><a href="software-jp.html">ソフトウェア</a></li>
-        <li><a href="tutorial-jp.html">チュートリアル</a></li>
-        <li><a href="http://arena.ai-comp.net/">参加登録</a></li>
-        <li><a href="preliminary-jp.html">予選</a></li>
-        <li><a href="final-jp.html">決勝</a></li>
-        <li><a href="faq-jp.html">FAQ</a></li>
+        <li>チュートリアル</li>
+        <li>参加登録</li>
+        <li>予選</li>
+        <li>決勝</li>
+        <li>FAQ</li>
         <li><a href="sponsor-jp.html">スポンサー</a></li>
         <li><a href="index.html">English</a></li>
       </ul>
@@ -53,29 +54,25 @@
 
     <section id="main">
 	  <h2>ソフトウェア</h2>
-      <p>SamurAI 3x3 ゲーム関連のソフトウェアとして、以下のものが公開されています。
+      <p>SamurAI 3x3 2016 ゲーム関連のソフトウェアとして、以下のものが公開されています。
       <ul>
-	<li><a href="software/SamurAImanager-0106.tgz">
-	    SamurAI 3x3 ゲームの実行管理システム</a>:
+	<li><a href="software/samurai-software-20161031.tgz">
+	    SamurAI 3x3 2016 ゲームの実行管理システム</a>:
 	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
 	  いくつかの AI プログラムのサンプルも含まれています。
-	  システムやサンプル AI プログラムは C++11 で記述してあります。<br>
-	  1月6日の更新で AI の指定のしかたなどのインタフェースが変更されました。
 	  詳しくは README.jp を見てください。
-	  従来の版と同じ出力形式のためには -t オプションを指定してください。
 	</li>
+<!--
 	<li>
 	  C++ 以外の言語で記述したサンプル AI プログラム。
 	  <ul>
-	    <li><a href="software/python2-player-0106.tgz">Python 2 (1月6日更新)</a></li>
-	    <li><a href="software/java-player-1218.tgz">Java (12月18日更新)</a></li>
+	    <li>（準備中）</li>
 	  </ul>
 	</li>
-	<li><a href="software/SamurAI_Visualizer.jar">
-	    ゲームログの可視化ツール</a>:
+	<li>ゲームログの可視化ツール（準備中）:
 	  実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
-	  このツールは Java で記述してあります。
 	</li>
+-->
       </ul>
     </section>
 
@@ -89,14 +86,15 @@
           <section id="contact">
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 4階</p>
-            <p>email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
-          samurai2015-contact@ipsj.or.jp</a></p>
+            <p>email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
+          samurai-contact@ipsj.or.jp</a></p>
           <a href="http://www.ipsj.or.jp/"><img src="images/IPSJ_logoB_M.gif" width="200"/></a>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>ゴールドスポンサー</h3>
+<!--
             <p>株式会社いい生活<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a></p>
 <p>株式会社日立製作所<br>
@@ -109,8 +107,9 @@
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
 
-
+-->
             <h3>サポーター</h3>
+<!--
 <p>ヴォーカル・スクール ヴィーナス<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -122,17 +121,20 @@
 <p>クレイ・ジャパン・インク<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
-
+-->
 <h3>メディアスポンサー</h3>
+<!--
             <p>株式会社ジースタイラス<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 
 <p><a href="https://moneyforward.com/">株式会社マネーフォワード</a></p>
+-->
           </section>
         </td>
         <td>
           <section id="supporters">
             <h3>協賛</h3>
+<!--
             <p class="smaller">
 
 China Computer Federation<br>
@@ -169,16 +171,18 @@ IEEE Japan Office<br>
 
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+-->
             </p>
           </section>
           <section id="backers">
             <h3>後援</h3>
+<!--
             <p class="smaller">
 独立行政法人情報処理推進機構<br><br>
 経済産業省<br><br>
 文部科学省
             </p>
+-->
           </section>
         </td>
       </tr>
