--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -40,7 +40,7 @@
         <li><a href="index-jp.html">ホーム</a></li>
         <li>日程</li>
         <li><a href="rules-jp.html">ルール</a></li>
-        <li>ソフトウェア</li>
+        <li><a href="software-jp.html">ソフトウェア</a></li>
         <li>チュートリアル</a></li>
         <li>参加登録</a></li>
         <li>予選</a></li>
