Updated Software Management System.

--- a/index-jp.html
+++ b/index-jp.html
@@ -99,6 +99,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+      	<li>11月11日: ゲームの実行管理システムを更新しました。<a href="software-jp.html">ソフトウェア</a> を参照ください。
       	<li>11月1日: ゲームの実行管理システムを <a href="software-jp.html">ソフトウェア</a> に公開しました。
       	<li>10月21日: 特典について更新しました。
       	<li>10月10日: <a href="rules-jp.html">ゲームルール</a>を更新しました。
