--- a/software-jp.html
+++ b/software-jp.html
@@ -48,8 +48,8 @@
 	  <h2>ソフトウェア</h2>
       <p>SamurAI 3x3 2016 ゲーム関連のソフトウェアとして、以下のものが公開されています。
       <ul>
-	<li><a href="software/samurai-software-20161031.tgz">
-	    SamurAI 3x3 2016 ゲームの実行管理システム</a>:
+	<li><a href="software/samurai-software-20161111.tgz">
+	    SamurAI 3x3 2016 ゲームの実行管理システム</a> (2016年11月11日更新):
 	  サムライを制御する AI プログラムを呼び出して、ルールにのっとってゲームの進行を管理します。
 	  いくつかの AI プログラムのサンプルも含まれています。
 	  詳しくは README.jp を見てください。
