--- a/software.html
+++ b/software.html
@@ -48,8 +48,8 @@
       <p>The following software systems are currently available for
 	the SamurAI 3x3 2016 game.</p>
       <ul>
-	<li><a href="software/samurai-software-20161031.tgz">
-	    SamurAI 3x3 2016 Game Management System</a>:
+	<li><a href="software/samurai-software-20161111.tgz">
+	    SamurAI 3x3 2016 Game Management System </a> (Updated 11 Nov 2016):
 	  Manages a SamurAI 3x3 2016 game according to its rules, invoking
 	  AI programs to control samurai.
 	  Several sample AI programs are also included.
