--- a/software-jp.html
+++ b/software-jp.html
@@ -54,15 +54,16 @@
 	  いくつかの AI プログラムのサンプルも含まれています。
 	  詳しくは README.jp を見てください。
 	</li>
+  <li><a href="software/viewer/samurai.html">
+      ゲームログの可視化ツール</a> (2016年11月21日更新):
+    実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
+  </li>
 <!--
 	<li>
 	  C++ 以外の言語で記述したサンプル AI プログラム。
 	  <ul>
 	    <li>（準備中）</li>
 	  </ul>
-	</li>
-	<li>ゲームログの可視化ツール（準備中）:
-	  実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
 	</li>
 -->
       </ul>
