--- a/software.html
+++ b/software.html
@@ -55,18 +55,18 @@
 	  Several sample AI programs are also included.
 	  See the README file for details.
 	</li>
+  <li><a href="software/viewer/samurai.html">
+      Game Log Visualizer</a> (Updated 21 Nov 2016):
+    Graphical visualizer for game logs output by the game
+    management system.
+    This tool is written in JavaScript.
+  </li>
 <!--
 	<li>Sample AI programs in languages other than C++.
 	  <ul>
 	    <li><a href="software/python2-player-0106.tgz">Python 2 (updated on Jan. 6)</a></li>
 	    <li><a href="software/java-player-1218.tgz">Java (updated on Dec. 18)</a></li>
 	  </ul>
-	</li>
-	<li><a href="software/SamurAI_Visualizer.jar">
-	    Game Log Visualizer</a>:
-	  Graphical visualizer for game logs output by the game
-	  management system.
-	  This tool is written in Java.
 	</li>
 -->
       </ul>
