Fix links to viewer.

--- a/software-jp.html
+++ b/software-jp.html
@@ -54,7 +54,7 @@
 	  いくつかの AI プログラムのサンプルも含まれています。
 	  詳しくは README.jp を見てください。
 	</li>
-  <li><a href="software/viewer/samurai.html">
+  <li><a href="software/views/samurai.html">
       ゲームログの可視化ツール</a> (2016年11月21日更新):
     実行管理システムが出力するゲームログをグラフィカルに可視化するプログラムです。
   </li>
