--- a/software.html
+++ b/software.html
@@ -55,7 +55,7 @@
 	  Several sample AI programs are also included.
 	  See the README file for details.
 	</li>
-  <li><a href="software/viewer/samurai.html">
+  <li><a href="software/views/samurai.html">
       Game Log Visualizer</a> (Updated 21 Nov 2016):
     Graphical visualizer for game logs output by the game
     management system.
