--- a/index-jp.html
+++ b/index-jp.html
@@ -99,6 +99,8 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
+        <li>11月25日: ゲームの実行管理システムとビジュアライザを更新しました。<a href="software-jp.html">ソフトウェア</a> を参照ください。
+        <li>11月21日: ビジュアライザを <a href="software-jp.html">ソフトウェア</a> に公開しました。
       	<li>11月11日: ゲームの実行管理システムを更新しました。<a href="software-jp.html">ソフトウェア</a> を参照ください。
       	<li>11月1日: ゲームの実行管理システムを <a href="software-jp.html">ソフトウェア</a> に公開しました。
       	<li>10月21日: 特典について更新しました。
