--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ and
     <section id="news">
       <h2>News</h2>
       <ul>
+<li>Nov 25: Game Management System and Visualizer have been updated. See <a href="software.html">Software</a>.
+<li>Nov 21: Visualizer is now available on the <a href="software.html">Software</a>.
 <li>Nov 11: Game Management System has been updated. See <a href="software.html">Software</a>. 
 <li>Nov 1: Game Management System is now available on the <a href="software.html">Software</a>. 
 <li>Oct 10: <a href="rules.html">Rules</a> have been slightly updated.
