Update hardware info page.

--- a/HardwareInfo.html
+++ b/HardwareInfo.html
@@ -3,9 +3,9 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2015-16">
+  <meta name="Description" content="SamurAI Coding 2016-17">
   <meta name="author" content="Hironori Washizaki">
-  <title>SamurAI Coding 2015-16</title>
+  <title>SamurAI Coding 2016-17</title>
   <link rel="stylesheet" href="stylesheets/default.css">
 </head>
 
@@ -15,74 +15,197 @@
 <center>
   <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/><br>
   <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a><br>
-<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="150"/></a>
-<a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="135"/></a>
-<a href="http://recochoku.jp/"><img src="images/RecoChoku.png" width="160"/></a>
-<a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a><br>
-<br>
-<a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
-<a href="http://www.fujitsu.com/"><img src="images/fujitsu-logo.jpg" width="80"/></a>
-<a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
-<a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a> 
-<a href="https://moneyforward.com/">Money Forward</a><br>
-<a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="60"/></a>
-<a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="50"/></a>
-<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE CS" width="100"/></a>
-<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="60"/></a>
-<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="70"/></a>
-<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="70"/></a>
-<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="70"/></a>
-<img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="60"/></a>
-<a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a>
-
+<a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a>
+<a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="105"/></a><br>
+<a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a>
+<a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a>
+<a href="http://www.jeita.or.jp/"><img src="images/JEITA.jpg" title="Japan Electronics and Information Technology Industries Association" width="90"/></a>
+<a href="http://www.jisa.or.jp/"><img src="images/JISA.png" title="Japan Information Technology Services Industry Association" width="90"/></a>
+<a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="90"/></a>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="60"/></a>
+<a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="90"/></a>
 </center>
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
+        <li>Schedule</li>
         <li><a href="rules.html">Rules</a></li>
         <li><a href="software.html">Software</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="http://arena.ai-comp.net/">Entry</a></li>
-        <li><a href="preliminary.html">Preliminary</a></li>
-        <li><a href="final.html">Final</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li>Tutorial</li>
+        <li>Entry</li>
+        <li>Preliminary</li>
+        <li>Final</li>
+        <li>FAQ</li>
         <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
 </header>
 <hr/>
 
-   <section id="importantdates">
-      <h2>Hardware Environment of Preliminary Rounds</h2>
+    <section id="main">
+      <h2>Hardware Environment of Online Execution</h2>
       <ul>
-	<li>CPU: Intel Xeon E6-2640 2.50GHz</li>
+      　　<li>Storage: SSD 30 GB</li>
+      　　<li>Memory: 1 GB</li>
+      　　<li>CPU: 2 Cores</li>
+      　　<li>Please see <a href="http://vps.sakura.ad.jp/specification/">the information page</a> of virtual private server (VPS) using 1G plan hosted by SAKURA Internet Inc..</li>
       </ul>
+    </section>
 
-<hr>
+    <section id="sponsors">
+    <h2>Sponsors and Supporters</h2>
+<!--
+<p>
+<table cellpadding="10">
+<tr align="center">
+<td>　</td>
+<td>　</td>
+<td>　</td>
+<td> </td>
+<td> </td>
+</tr>
+<tr>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
+<tr align="center">
+<td>　</td>
+<td>　</td>
+<td>　</td>
+<td>　</td>
+<td>　</td>
+</tr>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+<td><center></center></td>
+</tr>
+</table>
+</p>
+-->
+    </section>
+    <section id="news">
+      <h2>News</h2>
+      <ul>
+<li>Nov 25: Game Management System and Visualizer have been updated. See <a href="software.html">Software</a>.
+<li>Nov 21: Visualizer is now available on the <a href="software.html">Software</a>.
+<li>Nov 11: Game Management System has been updated. See <a href="software.html">Software</a>. 
+<li>Nov 1: Game Management System is now available on the <a href="software.html">Software</a>. 
+<li>Oct 10: <a href="rules.html">Rules</a> have been slightly updated.
+<li>Sep 3: Rules and Program Interface are now available on the <a href="rules.html">Rules page</a>.
+          <li>Sep 2: This preliminary website has been launched.
+      </ul>
+    </section>
+
+    <section id="registration">
+      <h2>Registration and Submission</h2>
+
+<p>There is no age limit. Moreover contestants can participate in the contest as individual or team; there is no maximum number of team members.</p>
+<!--
+<p>Please register your information and submit your program on the contest server. (TBD)</p>
+-->
+
+   <section id="prize">
+<h2>Prize</h2>
+
+<p>
+<b>For Preliminary round contestants (including World Finalists): </b>
+</p>
+
+<p>
+Preliminary round contestants are invited to Banquet on the World final round date on a first-come, 
+first-served basis; the number of Banquet participants is limited.
+</p>
+
+<p>
+Students can freely attend sessions of the <a href="http://www.ipsj.or.jp/event/taikai/79/">79th IPSJ Annual Convention by register themselves at the Convention site</a>. 
+</p>
+
+<p><b>For World Finalists: </b></p>
+
+<p>
+Winners of World Final will receive prizes. Moreover there will be some Sponsor Awards and Gifts (TBD).
+</p>
+
+<p>
+World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)
+</p>
+
+<p>
+Travel expense of one representative contestanst per each World final team participating 
+from far away areas will be partially supported.
+Last year World final contestants from out side of Japan received travel expenses up 
+to 100,000JPY per team, 
+and contestants from a long distance within Japan received full travel expenses.
+</p>
+
+<p>
+All World Final contestants will be presented on the contest site.
+</p>
+
+    </section>
+
+    <section id="importantdates">
+      <h2>Important Dates (TBD)</h2>
+      <ul>
+        <li>Rule announcement: Sep-Oct 2016</li>
+        <li>Online preliminary round: Nov 2016-Feb 2017</li>
+        <li>World final round in Nagoya (collocated with 79th IPSJ National Convention at <a href="http://en.nagoya-u.ac.jp/access/index.html">Nagoya University, Higashiyama Campus</a>): March 17, 2017</li>
+      </ul>
+    </section>
+
+<section id="game">
+      <h2>Game and AI</h2>
+<p>Contestants compete on their design and engineering skills of algorithms and AI strategies in addition to programming skills. See details at <a href="rules.html">Game Rules</a>.</p>
+<p>Contestants can choose a certain programming language among various major languages including C++ and Java. (TBD)</p>
+</section>
+    <section class="centered">
+      <img src="snapshot.png" width=100% />
+    </section>
+
+    <section id="committee">
+      <h2>Committee</h2>
+
+ <p>Hironori Washizaki (Director), Tasuku Hiraishi (Vice-Director), Takashi Chikayama (Executive Advisor), 
+ Ikuo Takeuchi, Shingo Takada, Matsuki Yoshino, Kazunori Sakamoto, Tetsuro Tanaka, Makoto Miwa, Michiko Oba, Noriko Fukazawa, Hiroshi Suzuki
+ </p>
+      <h2>Game Design Team (in 2015)</h2>
+      <p>Kazuma Hashimoto, Hirotaka Kameko, Yusei Kawakami, Yun-Ching Liu, Ryo Suzuki, Taisuke Yokoi
+</p>
+    </section>
+
+    <!--#include virtual="footer.html" -->
 <footer>
   <div>
     <table class="multicolumn">
       <tr>
-      	<td width="250">
-      	  <section id="contact">
-      	    <h3>Information Processing Society of Japan</a></h3>
-      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
-      	      1-5 Kanda-Surugadai, Chiyoda-ku,
-      	      Tokyo 101-0062 JAPAN<br>
-      	    email: <a class="contactadddr" href="mailto:samurai2015-contact@ipsj.or.jp">
+        <td width="250">
+          <section id="contact">
+            <h3>Information Processing Society of Japan</a></h3>
+            <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+              1-5 Kanda-Surugadai, Chiyoda-ku,
+              Tokyo 101-0062 JAPAN<br>
+            email: <a class="contactadddr" href="mailto:samurai-contact@ipsj.or.jp">
 
-      		  samurai2015-contact@ipsj.or.jp</a><br>
+            samurai-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
             <a href="http://www.ipsj.or.jp/english/index.html"><img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/></a>
-      	  </section>
-      	</td>
-      	<td width="300">
-      	  <section id="sponsors">
+          </section>
+        </td>
+        <td width="300">
+          <section id="sponsors">
             <h3>Gold Sponsors</h3>
             <p>e-Seikatsu Co., Ltd.<br>
             <a href="http://www.e-seikatsu.info/"><img src="images/e-Seikatsu.png" width="160"/></a></p>
+            <p>teamLab<br>
+            <a href="http://www.team-lab.com/"><img src="images/teamLab.png" width="105"/></a></p>
+
+<!--
           <p>Hitachi, Ltd.<br>
             <a href="http://www.hitachi.co.jp/"><img src="images/ea60010030dmac.png" width="145"/></a></p>
 <p>RecoChoku Co.,Ltd.<br>
@@ -90,7 +213,9 @@
 <p>TIS Inc.<br>
 <a href="https://www.tis.co.jp/"><img src="images/tis.png" width="150"/></a>
 </p>
+-->
             <h3>Supporters</h3>
+<!--
 <p>Vocal School, Venus<br>
 <a href="http://vocal.venus.to/"><img src="images/vocal-venus-logo.gif" width="60"/></a>
 </p>
@@ -101,22 +226,28 @@
 <p>Cray Japan Inc.<br>
 <a href="http://wwwjp.cray.com/"><img src="images/cray_logo_registered_.png" width="80"/></a>
 </p>
+-->
 
 <h3>Media Sponsors</h3>
+<!--
             <p>GSTYLUS<br>
             <a href="http://www.gstylus.co.jp/index.asp"><img src="images/gyaku_logo.jpg" width="60"/></a></p>
 <p><a href="https://moneyforward.com/">Money Forward, Inc.</a></p>
-      	  </section>
-      	</td>
-      	<td>
-      	  <section id="supporters">
-      	    <h3>Supporters</h3>
+          </section>
+-->
+        </td>
+        <td>
+          <section id="supporters">
+            <h3>Supporters</h3>
+
             <p class="smaller">
+<!--
 China Computer Federation<br>
 <a href="http://www.ccf.org.cn/"><img src="images/CCF.gif" title="China Computer Federation" width="80"/></a><br><br>
 
 Department of Information and Computer Science, Faculty of Science and Technology, Keio University<br>
 <a href="https://www.ics.keio.ac.jp/"><img src="images/Keio.png" title="Department of Information and Computer Science, Faculty of Science and Technology, Keio University" width="60"/></a><br><br>
+-->
 
 IEEE Computer Society<br>
 <a href="http://www.computer.org/web/guest"><img src="images/ComputerSocietyLogo-RGB-stacked.gif" title="IEEE Computer Society" width="100"/></a><br><br>
@@ -126,7 +257,9 @@ IEEE Computer Society Japan Chapter<br><br>
 IEEE Japan Office<br>
 <a href="http://jp.ieee.org/"><img src="images/IEEE.jpg" title="IEEE Japan Office" width="80"/></a><br><br>
 
-Information Technology Promotion Agency, Japan<br><br>
+Information Technology Promotion Agency, Japan<br>
+<a href="http://www.ipa.go.jp/"><img src="images/IPA.png" title="Information-technology Promotion Agency, Japan" width="90"/></a>
+<br><br>
 
 International Information Science Foundation<br><br>
 
@@ -139,27 +272,35 @@ Japan Information Technology Services Industry Association<br>
 Japan Society for Software Science and Technology<br>
 <a href="http://www.jssst.or.jp/"><img src="images/JSSST.gif" title="Japan Society for Software Science and Technology" width="90"/></a><br><br>
 
-Japan Users Association of Information Systems<br><br>
+Japan Users Association of Information Systems<br>
+<a href="http://www.juas.or.jp/"><img src="images/JUAS.png" title="Japan Users Association of Information Systems" width="90"/></a>
+<br><br>
 
-The Institute of Electronics, Information and Communications Engineers<br><br>
+The Institute of Electronics, Information and Communications Engineers<br>
+<a href="http://www.ieice.org/"><img src="images/IEICE.bmp" title="The Institute of Electronics, Information and Communication Engineers" width="60"/></a>
+<br><br>
 
 The Japanese Society for Artificial Intelligence<br>
 <a href="http://www.ai-gakkai.or.jp/"><img src="images/JSAI.png" title="The Japanese Society for Artificial Intelligence" width="70"/></a><br><br>
 
+<!--
 The Korean Institute of Information Scientists and Engineers<br>
 <a href="http://kiise.or.kr/"><img src="images/KIISE.jpg" title="The Korean Institute of Information Scientists and Engineers" width="180"/></a><br><br>
+-->
 
+<!--
 The Ministry of Economy, Trade and Industry<br><br>
+-->
 
 The Ministry of Education, Culture, Sports, Science and Technology
-
              </p>
           </section>
-      	</td>
+        </td>
       </tr>
     </table>
   </div>
 </footer>
+
 
   </body>
 </html>
